--- a/index.html
+++ b/index.html
@@ -28,30 +28,9 @@
   <div class="container">
     <h1>Selamat Datang di PinjamBarang</h1>
     <p>Pinjam, sewakan, dan dapatkan barang dengan mudah di sekitarmu.</p>
-    <a class="cta" href="pinjam.html">Mulai Pinjam</a>
+    <a class="cta" href="browsing.html">Mulai Pinjam</a>
   </div>
 </section>
-<div class="container">
-  <h3>Rekomendasi Barang</h3>
-  <div class="card-grid">
-    <div class="card">
-      <img src="assets/img/prj.png" alt="item">
-      <h4>Proyektor Portable</h4>
-      <div class="small">Harga: Rp125.000 / hari</div>
-      <div style="margin-top:auto">
-        <a class="btn btn-outline" href="browsing.html" onclick="addToCart('Proyektor Portable')">Add to Cart</a>
-      </div>
-    </div>
-    <div class="card">
-      <img src="assets/img/VC.png" alt="item">
-      <h4>Vacuum Cleaner</h4>
-      <div class="small">Harga: Rp67.000 / hari</div>
-      <div style="margin-top:auto">
-        <a class="btn btn-outline" href="browsing.html" onclick="addToCart('Vacuum Cleaner')">Add to Cart</a>
-      </div>
-    </div>
-  </div>
-</div>
 
 <footer class="footer">
   © PinjamBarang — Prototype • dibuat untuk demo
