--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
     <input class="input" type="email" required name="email" placeholder="you@example.com"><br><br>
     <label class="small">Password</label><br>
     <input class="input" type="password" required name="password" placeholder="••••••"><br><br>
-    <button class="btn btn-primary" type="submit">Masuk</button>
+    <button class="btn btn-primary" type="submit" onclick="window.location.href='browsing.html'; return false;">Masuk</button>
     <a href="signup.html" class="btn btn-outline">Buat Akun</a>
   </form>
   <p class="small" style="margin-top:12px">Ini hanya prototype — setelah submit, Anda akan langsung diarahkan ke halaman PinjamBarang.</p>
